                           Default to not installing a .forward file in Install
                             script.
                           Fix unused variable warning on OpenBSD.
                           Fix public remailer keys getting re-signed
                             every time keys are requested (Closes: #478383).
                           Make smtp sending similar to local /usr/lib/sendmail
                             sending (wrt header/body seperation;
                             Closes: #482052).
                           Add X-Loop header on mailbox forwarded messages.
                           Several small fixes by Sami Farin et al.
                           Detach correctly in daemon mode.
                           Minor Install script fixes.

2002-08-20	2.9b37     OpenPGP enhancement release (fixes by Disastry).
                           Fix a small bug in pgpdata.c that stopped Mixmaster
                             from reading cipher preferences.
                           Fixed Passphrase reading in mpgp (the test program)
                             on Windows platform.
                           Add Hash: header when clearsigning.
                           Properly handle RSA keys whose key size is not a 
                             multiple of 64.
                           Remove leading zeros from MPI.
                           Use MDC packets whenever possible.
                           List CAST5 and AES128 in cipher preferences.
                           Now displays Mixmaster version in the PGP version
                             header for non remailer/nym messages.

2002-??-??	2.9b38     Applied Maildir feature patch by drt@un.bewaff.net,
                             with some changes by PP:
                             MAILBOX can now be a Maildir (closes: #586223).
                           Install script deals with lack of patented IDEA
                             algorithm in a sane way (closes: #479020).